# tcc-back-end

./: .$diagrama-de-classe.drawio.bkp  .$diagrama-de-classe.drawio.dtmp  .$diagrama-entidade-relacionamento.drawio.bkp  .$diagrama-entidade-relacionamento.drawio.dtmp  .gitignore  README.md  diagrama-de-classe.drawio  diagrama-entidade-relacionamento.drawio  pyproject.toml  run.py
game/data/interfaces/: authentication_repository_interface.py  class_repository_interface.py  class_user_repository_interface.py  multiplication_game_repository_interface.py  users_repository_interface.py
game/data/use_cases/authentication_use_cases/: authentication_use_cases.py  authentication_use_cases_test.py
game/data/use_cases/classes/: __init__.py  classes.py
game/data/use_cases/classes_use_case/: __init__.py  classes_use_case.py
game/data/use_cases/multiplication_game_use_cases/: multiplication_game_use_case_test.py  (+1 more)
game/domain/models/: authentication_model.py  class_model.py  class_user_model.py  multiplication_game_model.py  users.py
game/domain/user_cases/: user_finder_interface.py  user_register_interface.py
game/main/adapters/: request_adapter.py
game/main/composers/: authentication_composer.py  classes_composer.py  multiplication_game_composer.py  users_composers.py
game/main/routes/: routes.py
game/main/server/: server.py
game/presentation/http_types/: http_request.py  http_response.py
game/presentation/interfaces/: authentication_controller_interface.py  class_controller_interface.py  multiplication_game_controller_interface.py  user_controller_interface.py
(+45 files in other folders)
