[tool.poetry]
name = "game"
version = "0.1.0"
description = ""
authors = ["Daniel Silva Ramos <daniel.silvaramos.93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
pytest = "^7.4.3"
psycopg2 = "^2.9.9"
pylint = "^3.0.2"
sqlalchemy-utils = "^0.41.1"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
